# mafw-tracker-source

./: Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  mafw-tracker-source-uninstalled.pc.in  mafw-tracker-source.pc.in
debian/: changelog  control  mafw-tracker-source.postinst  mafw-tracker-source.prerm  rules
libmafw-tracker-source/: Makefile.am  album-art.c  album-art.h  definitions.h  key-mapping.c  key-mapping.h  mafw-tracker-source-browse.c  mafw-tracker-source-marshal-main.c  mafw-tracker-source-marshal.list  mafw-tracker-source-metadata.c  mafw-tracker-source-sparql-builder.c  mafw-tracker-source-sparql-builder.h  mafw-tracker-source.c  mafw-tracker-source.h  org.freedesktop.Tracker3.Miner.xml  tracker-cache.c  tracker-cache.h  tracker-iface.c  tracker-iface.h  util.c  util.h
tests/: Makefile.am  check-mafwtrackersource.c  check-main.c  test.suppressions
